# interpretthis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONFORMANCE.md  CONTRIBUTING.md  Cargo.toml  MODULE_TEMPLATE.md  NOTICE  README.md  RELEASING.md  STATUS.md  THREAT_MODEL.md  build.rs  clippy.toml  deny.toml  license-header.txt  ticketsplease.toml
crates/interpretthis/: Cargo.toml  LICENSE-MIT  build.rs
crates/interpretthis-node/: .gitignore  Cargo.toml  README.md  build.rs  dts-header.d.ts  package-lock.json  package.json
crates/interpretthis-node/__test__/: index.test.mjs
crates/interpretthis-node/src/: convert.rs  lib.rs  tools.rs
crates/interpretthis-python/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/interpretthis-python/python/interpretthis/: __init__.py  _exceptions.py  _native.pyi  _types.py
crates/interpretthis-python/python/tests/: test_bindings.py
crates/interpretthis-python/src/: convert.rs  errors.rs  lib.rs  tools.rs
crates/interpretthis/benches/: containers.rs  main.rs  memory.rs  workloads.rs
crates/interpretthis/src/: config.rs  cycle.rs  interpreter.rs  lib.rs  mangle.rs  parser.rs  pyhash.rs  pyset.rs  serialize.rs  state.rs  types.rs  value.rs
crates/interpretthis/src/eval/: classes.rs  comprehensions.rs  control_flow.rs  delete.rs  exceptions.rs  literals.rs  match_stmt.rs  mod.rs  names.rs  op.rs  operations.rs  place.rs  render.rs  statements.rs  strings.rs
crates/interpretthis/src/eval/functions/: builtins.rs  call.rs  definitions.rs  dispatch.rs  generators.rs  helpers.rs  method_dispatch.rs  mod.rs  params.rs
crates/interpretthis/src/eval/functions/methods/: bytes.rs  counter.rs  deque.rs  dict.rs  float.rs  int.rs  list.rs  mod.rs  set.rs  str.rs  stringio.rs  tuple.rs
crates/interpretthis/src/eval/modules/: abc_mod.rs  array_mod.rs  asyncio_mod.rs  base64.rs  bisect.rs  calendar.rs  cmath.rs  collections.rs  contextlib_mod.rs  copy_mod.rs  dataclasses.rs  datetime.rs  decimal_mod.rs  enum_mod.rs  fractions.rs  functools.rs  hashlib.rs  heapq.rs  io_mod.rs  itertools.rs  json.rs  math.rs  mod.rs  operator.rs  random_mod.rs  re.rs  statistics.rs  string.rs  struct_mod.rs  sys_mod.rs  textwrap.rs  typing.rs  user_collections.rs
crates/interpretthis/src/security/: mod.rs  names.rs  validator.rs
crates/interpretthis/src/tools/: lazy_proxy.rs  mod.rs  resolver.rs
crates/interpretthis/tests/integration/: common.rs  conformance_anchors.rs  divergences.rs  engine_smoke.rs  host_value_api.rs  main.rs  parallelization.rs  parity_corpus_runner.rs  resource_limits.rs  security.rs  tool_system.rs
crates/interpretthis/tests/integration/cpython_vendored/: README.md  test_bytes_adapted.py  test_dict_adapted.py  test_set_adapted.py  test_str_adapted.py
crates/interpretthis/tests/integration/parity_corpus/_probe/: p_collections.py  p_comprehension.py  p_datetime.py  p_dunder_ops.py  p_functools.py  p_getattr.py  p_int_str_ops.py  p_iter_tools2.py  p_json.py  p_misc_builtins.py  p_numeric_edge.py  p_printable.py  p_re.py  p_repr_edge.py  p_slicing.py  p_str_encode.py  p_string_fmt2.py  p_unpacking.py
crates/interpretthis/tests/integration/parity_corpus/bytes/: bytearray_ops.py  bytes_bytearray_methods.py  bytes_constructor.py  bytes_hex_roundtrip.py  bytes_operations_grid.py  case_and_strip_methods.py  codec_errors_and_handlers.py  memoryview_attrs.py  memoryview_ops.py  methods_and_binding.py  ord_bytes.py  search_methods.py  unicode_escape_decode.py
crates/interpretthis/tests/integration/parity_corpus/classes/: abc_metaclass_abcmeta.py  abstract_base.py  binop_error_class_name.py  bound_method_as_attribute.py  bound_method_introspection.py  class_attribute.py  class_body_control_flow.py  class_body_multi_assign.py  class_body_name_reference.py  class_method_in_map.py  class_value_call.py  classmethod_via_instance.py  coercion_dunders.py  computed_base.py  dataclass_classvar_initvar.py  dataclass_fields_postinit_replace.py  dataclass_like.py  descriptors_deep.py  dunder_arith.py  dunder_attr_access.py  dunder_call.py  dunder_eq.py  dunder_eq_containers.py  dunder_format.py  dunder_hash.py  dunder_iadd.py  dunder_iter_protocol.py  dunder_len_and_contains.py  dunder_ordering.py  dunder_protocols_deep.py  dynamic_type_and_lambda_methods.py  enum_iteration.py  enum_members_deep.py  getattr_method_call.py  getattribute_override.py  hash_eq_containers.py  inplace_ops.py  instance_identity_eq.py  instance_identity_hash.py  iterator_protocol2.py  (+20 more)
crates/interpretthis/tests/integration/parity_corpus/closures/: args_kwargs_grid.py  chained_assignment_shares.py  computed_callable_direct_call.py  decorator_with_args.py  decorators_higher_order.py  default_arg_captures_loop_var.py  dunder_call_method_form.py  except_auto_del_after_handler.py  function_annotations.py  function_attributes.py  function_defaults_introspection.py  function_hashable_by_identity.py  functools_wraps_name.py  generator_expression_consumption.py  global_in_method.py  lambda_defaults_and_nested.py  late_binding_cell_capture.py  late_binding_robustness.py  module_level_closures.py  nested_function_recursion.py  nested_read_enclosing.py  nonlocal_counter.py  shared_nonlocal_cell.py  walrus_in_comprehension.py  walrus_in_function_local.py  walrus_in_while.py
crates/interpretthis/tests/integration/parity_corpus/comparisons/: binary_operators.py  chain.py  cross_type_numeric.py  identity_is.py  list_tuple_element_typeerror.py  lte_gte_wide_numeric.py  mixed_and_chained.py  numeric_is_identity.py  reflected_eq.py  sort_mixed_numeric.py
crates/interpretthis/tests/integration/parity_corpus/comprehensions/: README.md  all_genexp.py  any_genexp.py  comprehension_scoping.py  edge_cases.py  instance_bool_filter.py  list_comprehension.py  list_from_genexp.py  max_genexp.py  min_genexp.py  nested_and_scope.py  set_from_genexp.py  sorted_genexp.py  walrus_rebind_dict.py  walrus_rebind_gen.py  walrus_rebind_list.py  walrus_rebind_set.py  walrus_scope.py
crates/interpretthis/tests/integration/parity_corpus/descriptors/: cached_property.py  (+6 more)
(+1349 files in other folders)
