[workspace]
resolver = "3"
members = [
    "crates/interpretthis",
    "crates/interpretthis-python",
    "crates/interpretthis-node",
]
# Everyday lanes (bare `cargo build/check/clippy/test`) resolve to the core crate
# only. The binding crates carry expensive, single-purpose graphs (pyo3 + maturin,
# napi + node) that nothing else depends on, so they stay off the hot path. They
# remain full `members`, so explicit `-p` builds still work, and CI restores their
# coverage with dedicated `-p` lanes.
default-members = ["crates/interpretthis"]

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = [
    "Thomas Santerre <opensource@moderately.ai>",
    "Moderately AI Inc. <opensource@moderately.ai>",
]
repository = "https://github.com/moderately-ai/interpretthis"
homepage = "https://github.com/moderately-ai/interpretthis"

[workspace.dependencies]
# The core crate, as consumed by the binding crates. `version` alongside `path`
# keeps it publishable as-is.
interpretthis = { path = "crates/interpretthis", version = "0.4.0" }

# `default-features = false` to drop the default `malachite-bigint` feature, which
# is the ONLY thing that pulled `malachite` (LGPL-3.0-only) into the tree — and it
# is statically linked into every binary we ship. RustPython offers `num-bigint` as
# a first-class alternative for exactly this reason, and `num-bigint` (MIT/Apache)
# is a crate we already depend on directly for `Value::BigInt`, so the AST's
# integer literals now arrive as the same type the interpreter already uses.
#
# `location` is the other default and IS needed (line/column spans on AST nodes).
rustpython-parser = { version = "=0.4.0", default-features = false, features = [
    "location",
    "num-bigint",
] }
tokio = { version = "=1.50.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
# `rc` feature provides Serialize/Deserialize impls for Arc<T>.
# Value::Function and Value::Lambda hold their inner def via Arc so
# closure-capture is reference-share (O(N) storage) instead of
# deep-clone (O(2^N)).
serde = { version = "=1.0.228", features = ["derive", "rc"] }
serde_json = { version = "=1.0.149", features = ["arbitrary_precision"] }
thiserror = "=2.0.18"
indexmap = { version = "=2.13.0", features = ["serde"] }
async-trait = "=0.1.89"
# Interior mutability for interpreter state — execute(&self, ...)
# serializes concurrent calls without forcing &mut self on callers.
parking_lot = { version = "=0.12.3", features = ["send_guard"] }
# Stdlib module emulation: `re` (regex), `datetime` (chrono),
# `hashlib` (sha2), `base64`, `hex` for digest output.
regex = "=1.12.3"
chrono = { version = "=0.4.44", features = ["serde"] }
sha2 = "=0.10.9"
base64 = "=0.22.1"
hex = "=0.4.3"
# Stdlib `decimal` + `fractions` module emulation: arbitrary-precision
# Decimal (matches CPython's contract) and auto-simplifying Fraction.
bigdecimal = { version = "=0.4.10", features = ["serde"] }
num-rational = { version = "=0.4.2", features = ["serde"] }
num-bigint = { version = "=0.4.6", features = ["serde"] }
num-traits = "=0.2.19"
# Integer `Roots` trait (exact isqrt over BigInt). MIT OR Apache-2.0; already in
# the tree as a num-bigint dependency.
num-integer = "=0.1.46"
# Python `complex` storage + arithmetic (abs/conj/pow/div). MIT OR Apache-2.0.
num-complex = { version = "=0.4.6", features = ["serde"] }
# Drop-in `HashMap`/`HashSet` swap that uses FxHash instead of SipHash.
# The interpreter runs sandboxed user code; per-lookup hash cost is what
# shows up in benches. Public API surfaces keep std HashMap for
# downstream-caller compatibility.
rustc-hash = "=2.1.1"
# Inline-storage `String` replacement. CompactString fits up to 24 bytes
# of UTF-8 in the same 24-byte footprint as a plain `String` header
# without allocating — small strings (dict keys like "id", "name", short
# identifiers) stay on the stack.
compact_str = { version = "0.8", features = ["serde"] }

# Optional alternative global allocators for the bench harness.
tikv-jemallocator = "=0.6.0"
tikv-jemalloc-ctl = { version = "=0.6.0", features = ["stats"] }
mimalloc = { version = "0.1", default-features = false }

criterion = { version = "=0.7.0", features = ["html_reports"] }

[workspace.lints.rust]
# Inherited by `crates/interpretthis` via `[lints] workspace = true`.
#
# The binding crates deliberately do NOT inherit this: pyo3 and napi macro
# expansions emit `unsafe`, so a crate carrying this deny would fail to compile.
# They declare their own local `[lints]` table instead — do not add
# `[lints] workspace = true` to a binding crate.
unsafe_code = "deny"

[workspace.lints.clippy]
# Correctness baseline (`clippy::all`). Pedantic/nursery/cargo stay off:
# they churn across clippy versions and break MSRV CI with false positives.
# Production unwrap/expect/panic is still denied in `src/lib.rs`.
all = { level = "deny", priority = -1 }
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
cargo = { level = "allow", priority = -1 }

dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Production code is gated by `#![deny(clippy::unwrap_used, ...)]` in
# `src/lib.rs`. Package-level allow lets integration tests and benches
# use expect/unwrap for fixture setup without fighting the same lint.
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
todo = "allow"

# Practical relaxations for an AST interpreter (large match arms,
# numeric casts, private-module trees, dense evaluation codepaths).
redundant_pub_crate = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
cognitive_complexity = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
wildcard_imports = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
float_cmp = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
large_enum_variant = "allow"
type_complexity = "allow"
result_large_err = "allow"
multiple_crate_versions = "allow"
significant_drop_tightening = "allow"
await_holding_lock = "allow"
future_not_send = "allow"
items_after_statements = "allow"
option_if_let_else = "allow"
manual_let_else = "allow"
match_same_arms = "allow"
redundant_closure_for_method_calls = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
trivially_copy_pass_by_ref = "allow"
implicit_hasher = "allow"
uninlined_format_args = "allow"
too_long_first_doc_paragraph = "allow"

# Disk hygiene + fast iteration: line-tables-only debug info, opt-level=1 deps.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1

# Never set `panic = "abort"` in any profile: PyO3 needs `panic = "unwind"` to
# convert a Rust panic into a Python exception, and the default release profile
# already unwinds — which is why no `[profile.release]` override exists here.
